--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ Django==5.2.1
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
-psycopg2==2.9.10
+psycopg2-binary==2.9.10
 PyJWT==2.9.0
 six==1.17.0
 sqlparse==0.5.3
